--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aiohttp-retry==2.8.3
 aiomysql==0.2.0
 aiosignal==1.3.1
 annotated-types==0.7.0
-anyio==4.4.0
+anyio==3.4.0
 async-timeout==4.0.3
 attrs==24.2.0
 bcrypt==4.2.0
@@ -16,6 +16,7 @@ colorama==0.4.6
 coolsms==0.4
 coolsms-python-sdk==2.0.3
 cryptography==43.0.0
+charset-normalizer==3.3.2
 databases==0.9.0
 dnspython==2.6.1
 ecdsa==0.19.0
@@ -55,4 +56,4 @@ uvicorn==0.30.6
 watchfiles==0.23.0
 websockets==12.0
 yarl==1.9.4
-openai
+itsdangerous
